better multi-filter readability, fixes #837

--- a/app/styles/components/shared/react-select.scss
+++ b/app/styles/components/shared/react-select.scss
@@ -60,7 +60,7 @@
 
   :global .Select-option {
     background: $color-base;
-    color: $color-mid-blue;
+    color: $color-button-primary;
   }
 
   :global .Select-option:last-child {
